Changed {"$/"} to {~$/} just for Damian.
git-svn-id: http://svn.pugscode.org/pugs@23157 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -1264,7 +1264,7 @@ In string context it evaluates to C<$0>, the entire matched string:
 
     print %hash{"{$text ~~ /<ident>/}"};
     # or equivalently: 
-    $text ~~ /<ident>/  &&  print %hash{"$/"};
+    $text ~~ /<ident>/  &&  print %hash{~$/};
 
 But generally you should say C<$0> if you mean C<$0>.
 
